--- a/templates/base.html
+++ b/templates/base.html
@@ -17,10 +17,22 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a class="pure-button" href="#">Github</a>
+                            <a class="button-success pure-button" href="/">主页</a>
                         </li>
                         <li class="nav-item">
-                            <a class="pure-button" href="#">Weibo</a>
+                            <a class="button-success pure-button" href="/">归档</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="button-success pure-button" href="/">专题</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="button-success pure-button" href="/">About Me</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="pure-button" href="https://github.com/vosamo/my_blog">Github</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="pure-button" href="http://weibo.com/sduvosamo/">Weibo</a>
                         </li>
                     </ul>
                 </nav>
