--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,10 @@
     {% for post in post_list %}
     <section class="post">
         <header class="post-header">
-            <h2 class="post-title">{{ post.title }}</h2>
-            <p class="post-meta">Time:<a class="post-author" href="#">{{ post.date_time }}</a> <a class="post-category-js" href="#">{{ post.category }}</a></p>
+            <h2 class="post-title"><a href="{% url 'detail' post.id %}">{{ post.title }}</a></h2>
+            <p class="post-meta">
+                Time:<a class="post-author" href="#">{{ post.date_time|date:"Y /m /d" }}</a> <a class="post-category-js" href="#">{{ post.category }}</a>
+            </p>
         </header>
         <div class="post-description">
             <p>
