--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
                 <nav class="nav">
                     <ul class="nav-list">
                         <li class="nav-item">
-                            <a class="button-success pure-button" href="/">主页</a>
+                            <a class="button-success pure-button" href="{% url 'home' %}">主页</a>
                         </li>
                         <li class="nav-item">
                             <a class="button-success pure-button" href="/">归档</a>
